@@ -17,6 +17,7 @@ Fixed
     Dont show deleted backups
     Fix server overview doesnt load properly when system details missing (#262)
     Deleting last project when on project blocks UI (#261)
+    used_by on networks now returning null & preventing UI from loading
 
 Changed
     Used buttons instead of dropdown to change instance state
